--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==7.1.2
 colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.1.7
+django-crispy-forms==1.10.0
 django-heroku==0.3.1
 gunicorn==20.0.4
 html5lib==1.1
