--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,12 @@ asgiref==3.3.1
 astroid==2.4.1
 atomicwrites==1.4.0
 attrs==19.3.0
-beautifulsoup4==4.9.3
 click==7.1.2
 colorama==0.4.3
 dj-database-url==0.5.0
 Django==3.1.7
 django-crispy-forms==1.10.0
+djangorestframework==3.12.2
 django-heroku==0.3.1
 gunicorn==20.0.4
 html5lib==1.1
@@ -18,7 +18,6 @@ mccabe==0.6.1
 more-itertools==8.3.0
 nltk==3.5
 numpy==1.18.4
-opencv-python==4.4.0.46
 packaging==20.4
 pandas==1.1.5
 pluggy==0.13.1
@@ -31,7 +30,6 @@ python-dateutil==2.8.1
 python-decouple==3.4
 pytz==2020.4
 regex==2020.5.14
-scikit-learn==0.23.1
 scipy==1.4.1
 six==1.14.0
 soupsieve==2.1
